[package]
name = "opengame"
version = "0.0.1"
edition = "2021"
authors = ["Dragnansia"]
description = "A simple program to install gaming dependencies on Linux distro"

[dependencies]
async-trait = "0.1.52"
tar = "0.4.38"
serde_json = "1.0.78"
futures-util = "0.3.19"
indicatif = "0.16.2"
log = "0.4.14"
flate2 = "1.0.22"

[dependencies.simple_logger]
version = "2.1.0"
default-features = false
features = ["colors"]

[dependencies.clap]
version = "3.0.13"
features = ["derive"]

[dependencies.reqwest]
version = "0.11.9"
default-features = false
features = ["rustls-tls", "stream", "blocking"]

[dependencies.tokio]
version = "1.16.1"
features = ["full"]
