[package]
name = "opengame"
version = "0.0.1"
edition = "2021"
authors = ["Dragnansia"]
description = "A simple program to install gaming dependencies on Linux distro"

[dependencies]
async-trait = "0.1.52"
serde_json = "1.0.79"
futures-util = "0.3.21"
indicatif = "0.16.2"
log = "0.4.14"

[dependencies.color-logger]
git = "https://github.com/Dragnansia/color-logger.git"
branch = "main"

[dependencies.clap]
version = "3.1.0"
features = ["derive"]

[dependencies.reqwest]
version = "0.11.9"
default-features = false
features = ["rustls-tls", "stream", "blocking"]

[dependencies.tokio]
version = "1.17.0"
features = ["full"]

[dependencies.lamodin]
git = "https://github.com/Dragnansia/lamodin"
branch = "main"