[package]
name = "tui"
version = "0.0.1"
edition = "2021"

[dependencies]
async-trait = "0.1.53"
serde_json = "1.0.79"
futures-util = "0.3.21"
indicatif = "0.16.2"
log = "0.4.14"

[dependencies.color-logger]
git = "https://github.com/Dragnansia/color-logger.git"
branch = "main"

[dependencies.clap]
version = "3.1.9"
features = ["derive"]

[dependencies.reqwest]
version = "0.11.10"
default-features = false
features = ["rustls-tls", "stream", "blocking"]

[dependencies.tokio]
version = "1.17.0"
features = ["full"]

[dependencies.lamodin]
git = "https://github.com/Dragnansia/lamodin"
branch = "main"
